--- a/tic-tac-toe/Main/index1.html
+++ b/tic-tac-toe/Main/index1.html
@@ -12,19 +12,20 @@
         <div class="h">
             <h1 id="h1">Welcome to the Game</h1>
         </div>
-            <button type="button" class="button" id="player1" onclick="window.location.href='/1player/1player.html'" >One Player</button>
-            <button type="button" class="button" id="player2"onclick="window.location.href='/2player/index.html'" >Two Player</button> 
+            <button type="button" class="button" id="player1" onclick="window.location.href='//127.0.0.1:5500/tic-tac-toe/1player/1player.html'" >One Player 3*3</button>
+            <button type="button" class="button" id="player2" onclick="window.location.href='//127.0.0.1:5500/tic-tac-toe/2player/index.html'" >Two Player  3*3</button> 
             </br>
             </br>
-        <button type="button" class="button" id="three">3*3</button>
-        <button type="button" class="button" id="four">4*4</button>
+        <button type="button" class="button" id="three" onclick="window.location.href='//127.0.0.1:5500/tic-tac-toe/four/four.html'">One Player 4*4</button>
+        <button type="button" class="button" id="four"  onclick="window.location.href='//127.0.0.1:5500/tic-tac-toe/four2/four2.html'">Tow Player 4*4</button>
 
              </br>
             </br></br>
         <button type="button" class="button" id="easy" >Easy</button>
         <button type="button" class="button" id="hard" >Hard</button>
             </br></br>
-         <button type="button" class="button" id="go" >GO</button>
+        <!-- <button type="button" class="button" id="go" >GO</button>
+            -->
     
        
 
